--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Progate</title>
-    <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Unduh Font Awesome dibawah -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
   </head>
