--- a/index.html
+++ b/index.html
@@ -1,22 +1,89 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bank Progate</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <!-- Unduh Font Awesome dibawah -->
-  </head>
-  <body>
-    <!-- Ketik code Anda dibawah -->
-    <div class="top-wrapper">
-      <div class="container-wrapper">
-          <h1>BANK PROGATE</h1>
-          <h2>SOLUSI BIJAK KEUANGAN ANDA</h2>
-          <p>Bank Progate merupakan lembaga penyimpanan uang yang terpercaya sejak 1928</p>
-          <div class="btn-wrapper">
-              <a href="#" class="btn-offer">Penawaran Kami</a>
-          </div>
-      </div>
-    </div>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Bank Progate</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <h1>Investasi Masa Depan Anda Bersama Kami</h1>
+            <p>sejak 1928</p>
+        </header>
+        <div class="top-wrapper">
+            <div class="container-wrapper">
+                <h1>BANK PROGATE</h1>
+                <h2>SOLUSI BIJAK KEUANGAN ANDA</h2>
+                <p>Bank Progate merupakan lembaga penyimpanan uang yang terpercaya sejak 1928</p>
+                <div class="btn-wrapper">
+                    <a href="#" class="btn-offer">Penawaran Kami</a>
+                </div>
+            </div>        
+        </div>
+        <div class="mid-wrapper">
+            <div class="container">
+                <div class="heading">
+                    <h1 class="Title1">Ayo menabung demi masa depan anda bersama kami</h1>
+                </div>
+                <div class="lessons flex-list">
+                    <div class="lesson">
+                        <div class="lesson-icon">
+                            <img class="Bisnis" src="bisnis.png" alt="bisnis">
+                            <p>Progate Bisnis</p>
+                        </div>
+                        <p class="txt-contents">Progate Bisnis mendukung bagi kamu pelaku bisnis, untuk memudahkan kamu melakukan transaksi dengan layanan yang cepat dan mudah </p>
+                    </div>
+                    <div class="lesson">
+                        <div class="lesson-icon">
+                            <img class="Junior" src="Junior.png" alt="junior">
+                            <p>Progate Junior</p>
+                        </div>
+                        <p class="txt-contents">Progate Junior akan membantu kamu untuk lebih disiplin dalam mengelola keuangan, membentuk karakter "gemar menabung", dan melatih mempersiapkan masa depan. </p>
+                    </div>
+                    <div class="lesson">
+                        <div class="lesson-icon">
+                            <img class="Plus" src="plus.png" alt="plus">
+                            <p>Progate Plus</p>
+                        </div>
+                        <p class="txt-contents">Progate Plus menabung dengan lebih mudah karena menggunakan sistem autodebet dan suku bunga tertinggi dari semua tabungan. </p>
+                    </div>
+                    <div class="lesson">
+                        <div class="lesson-icon">
+                            <img class="Haji" src="haji.png" alt="haji">
+                            <p>Progate Haji</p>
+                        </div>
+                        <p class="txt-contents">Progate Haji akan  memudahkan nasabah dalam mempersiapkan Biaya Penyelenggaraan Ibadah Haji baik Haji Reguler, Haji Khusus (Haji Plus) maupun Umroh. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="container">
+                <li>
+                    <div class="kolom-kiri">
+                        <img src="http://3.bp.blogspot.com/-ELuUyKi45cs/V-IBdJpaZ8I/AAAAAAAAFuE/1-f8_tmbcKgEFMdm4BdRfoHvsoVdztBlgCK4B/s1600/OJK%2B%2528Otoritas%2BJasa%2BKeuangan%2529%2Bvector%2Blogo.png" alt="logo ojk">
+                    </div>
+                </li>
+                <li>
+                    <div class="kolom-tengah">
+                        <h3>Kantor Pusat</h3>
+                        <p>Jalan Guru Domba no. 15</p>
+                        <p>Jakarta 15467 Indonesia</p>
+                        <p>Telf. 14045, +628123456789</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="kolom-kanan">
+                        <h3>Hubungi Kami</h3>
+                        <p><a href="https://web.facebook.com/ProgateID" class="fb">Facebook</a></p>
+                        <p><a href="https://twitter.com/progateID" class="twt">Twitter</a></p>
+                        <p><a href="https://www.instagram.com/progateid/" class="ig">Instagram</a></p>
+                    </div>
+                </li>
+            </div>
+            <div class="paling-bawah">
+                <p>© 2020 PT Bank Progate (Persero) Tbk.</p>
+            </div>
+        </footer>
+    </body>
 </html>
