--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Bank Progate</title>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -62,22 +62,24 @@
                 <div class="kolom-kiri">
                     <img src="http://3.bp.blogspot.com/-ELuUyKi45cs/V-IBdJpaZ8I/AAAAAAAAFuE/1-f8_tmbcKgEFMdm4BdRfoHvsoVdztBlgCK4B/s1600/OJK%2B%2528Otoritas%2BJasa%2BKeuangan%2529%2Bvector%2Blogo.png" alt="logo ojk">
                 </div>
-                <li>
-                    <div class="kolom-tengah">
-                        <h3>Kantor Pusat</h3>
-                        <p>Jalan Guru Domba no. 15</p>
-                        <p>Jakarta 15467 Indonesia</p>
-                        <p>Telf. 14045, +628123456789</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="kolom-kanan">
-                        <h3>Hubungi Kami</h3>
-                        <p><a href="https://web.facebook.com/ProgateID" class="fb">Facebook</a></p>
-                        <p><a href="https://twitter.com/progateID" class="twt">Twitter</a></p>
-                        <p><a href="https://www.instagram.com/progateid/" class="ig">Instagram</a></p>
-                    </div>
-                </li>
+                <div class="kolom-kanan">
+                    <li>
+                        <div class="kolom-kanan-kiri">
+                            <h3>Hubungi Kami</h3>
+                            <p><a href="https://web.facebook.com/ProgateID" class="fb">Facebook</a></p>
+                            <p><a href="https://twitter.com/progateID" class="twt">Twitter</a></p>
+                            <p><a href="https://www.instagram.com/progateid/" class="ig">Instagram</a></p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="kolom-kanan-kanan">
+                            <h3>Kantor Pusat</h3>
+                            <p>Jalan Guru Domba no. 15</p>
+                            <p>Jakarta 15467 Indonesia</p>
+                            <p>Telf. 14045, +628123456789</p>                            
+                        </div>
+                    </li>
+                </div>
             </div>
             <div class="paling-bawah">
                 <p>© 2020 PT Bank Progate (Persero) Tbk.</p>
